# lab

./: .coverage  .env.exemple  .gitignore  Dockerfile  Dockerfile.ollama  compose.gpu.yml  compose.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
lab/: __init__.py  celery.py  config.py  prompts.py  security.py
lab/dao/: __init__.py  dao_documents.py  dao_ollama.py  dao_openai.py  dao_parameters.py  dao_patient.py  dao_users.py
lab/models/: __init__.py
lab/routers/: admin.py  documents.py  ollama.py  openAI.py  parameters.py  patient.py
scripts/: init.sql  my-database.sql
tests/: test_app.py
