[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["meirelesgc <geu_costa@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = {extras = ["standard"], version = "^0.115.2"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
python-multipart = "^0.0.12"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.2"
pypdf = "^5.0.1"
openai = "^1.51.2"
tiktoken = "^0.8.0"
celery = "^5.4.0"
flower = "^2.0.1"
pydantic-settings = "^2.5.2"
unidecode = "^1.3.8"
unstructured = "^0.15.14"
langchain-ollama = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.6.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'uvicorn lab:app --reload'
test = 'pytest -s -x --cov=lab -vv'
flower = 'celery -A lab.celery flower'
worker = 'celery -A lab.routers.documents.celery worker --loglevel=INFO --concurrency=1'