[tool.poetry]
name = "lab"
version = "1.0.0"
description = "Api para extração segura de métricas médicas de documentos não estruturados"
authors = ["meirelesgc <geu_costa@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic-settings = "^2.6.1"
celery = "^5.4.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}
langchain = "^0.3.7"
chromadb = "^0.5.17"
pypdf = "^5.1.0"
langchain-community = "^0.3.5"
langchain-ollama = "^0.2.0"
langchain-chroma = "^0.1.4"
langchain-openai = "^0.2.5"
flower = "^2.0.1"
unidecode = "^1.3.8"
pyjwt = "^2.9.0"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.0"
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'uvicorn lab:app --reload'
flower = 'celery -A lab.celery flower'
worker = 'celery -A lab.celery worker --loglevel=INFO --concurrency=1'